using Google.Protobuf;

namespace Data
{
    
    public sealed partial class PlayerDeckData : IMessage<PlayerDeckData>
    {

    }
    
    public sealed partial class PlayerHeroData : IMessage<PlayerHeroData>
    {

    }
    
    public sealed partial class PlayerMultiDeckData : IMessage<PlayerMultiDeckData>
    {

    }
    
}